[FIX] grammatic mistake in description

--- a/base_address_management/static/description/index.html
+++ b/base_address_management/static/description/index.html
@@ -13,7 +13,7 @@
             <p class="oe_mt32">
 Extends address with additional fields like house and apartment number. Also you can archive 
 old addresses that any partner had. You can see history of all addreses and the current one 
-that is being used. There are buttons to help arvhive and update addresses easier.
+that is being used. There are buttons to help archive and update addresses easier.
             </p>
             <div class="oe_centeralign oe_websiteonly">
                 <a href="http://www.oerp.eu/#trial" class="oe_button oe_big oe_tacky">Start your <span class="oe_emph">free</span> trial</a>
